authelia/50-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: authelia-tls-prod-cert
    hosts:
      - authelia.sost.ovh
  rules:
  - host: authelia.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: authelia-service
          servicePort: 80
